Closed
Bug 677455
Opened 12 years ago
Closed 12 years ago
IonMonkey: Assertion failure: GetObservedType(in) == phi->type(), at IonAnalysis.cpp:423
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: adrake, Assigned: dvander)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
224 bytes,
application/javascript
|
Details | |
1.22 KB,
patch
|
rpearl
:
review+
|
Details | Diff | Splinter Review |
The attached test case asserts during type analysis phase on ionmonkey tip.
![]() |
Assignee | |
Comment 1•12 years ago
|
||
Every time we change a value's specialization, we need to re-analyze any phi dependencies. We don't do this though until we've analyzed at least one phi - the flag was just in the wrong place, so it a specialization changed while analyzing phis for the first time, it wouldn't reflow.
Updated•12 years ago
|
Attachment #551793 -
Flags: review?(rpearl) → review+
Reporter | ||
Comment 2•12 years ago
|
||
http://hg.mozilla.org/projects/ionmonkey/rev/f226f89b29e9
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•