Make sure to re-analyze phis of phis (bug 677455, r=rpearl).